.kubernetes/fe-samples/overlays/prod/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-samples
spec:
  template:
    spec:
      nodeSelector:
        mosaic.axinom.com/workload_type: general
      containers:
        - image: harbor.axinom.com/mosaic/managed-services/fe-samples:latest
          name: app
