.kubernetes/fe-samples/overlays/prod/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-samples
spec:
  template:
    spec:
      containers:
      - name: app
        resources:
           limits:
            cpu: 500m
            memory: 512Mi
           requests:
            cpu: 300m
            memory: 512Mi
